added home url to urls.py

--- a/Thehood/templates/base.html
+++ b/Thehood/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Awwards</title>
+    <title>The hood</title>
     {%block styles%}
     {%bootstrap_css%}
     <link rel="stylesheet" href="{% static 'css/basenews.css' %}">
