--- a/Thehood/templates/navbar.html
+++ b/Thehood/templates/navbar.html
@@ -30,7 +30,7 @@
                                 <a class='btn btn-default' href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class='btn btn-default' href="{}">My Profile</a>
+                                <a class='btn btn-default' href="{% url 'profile'%}">My Profile</a>
                               </li>
                     {% if user.is_authenticated %}
                     <li class="dropdown" class="nav-item">
