--- a/Thehood/templates/navbar.html
+++ b/Thehood/templates/navbar.html
@@ -27,10 +27,10 @@
             <div style="float:right;">
                 <ul class="nav">
                         <li class="nav-item">
-                                <a class='btn btn-default' href="/">Home</a>
+                                <a class='btn btn-default'a href="/logout">Logout</a>
                             </li>
                             <li class="nav-item">
-                                <a class='btn btn-default' href="{% url 'profile'%}">My Profile</a>
+                                <a class='btn btn-default' href="{%url 'profile' %}">My Profile</a>
                               </li>
                     {% if user.is_authenticated %}
                     <li class="dropdown" class="nav-item">
@@ -39,7 +39,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                                 <li>
-                                  <a href="">Account</a>
+                                  <a href="{%url 'profile' %}">Account</a>
                                 </li>
                                 <li>
                                   <a href="/accounts/password/change">Change Password</a>
