removed dropdown navbar

--- a/Thehood/templates/live.html
+++ b/Thehood/templates/live.html
@@ -1,17 +1,18 @@
-{% extends 'base.html' %}
-{% load bootstrap4 %}
-{% block content %}
-<div class="container-fluid">
-<div class="row" id="parent">
-        <h3 style="color:#00A6FB;margin:1%;">Hoods in Neighbourhood</h3>
-        {% for hood in hoods %}
-        <div class="card" id="child">
-                <img class="card-img-top" src="{{hood.pic.url}}" id="childppic" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{hood.neighbourhood}}</h5>
-                </div>
-              </div>
-        {% endfor %}
-        </div>
-</div>
-{% endblock %}
+ {% extends 'base.html' %}
+ {% load bootstrap4 %}
+ {% block content %}
+ <div class="container-fluid">
+   <div class="row" id="parent">
+     <h3 style="color:#00A6FB;margin:1%;">Hoods in Neighbourhood</h3><br><br>
+     {% for hood in hoods %}
+     <div class="card" id="child">
+       <img class="card-img-top" src="{{hood.pic.url}}" id="childppic" alt="Card image cap"
+         style="height: 400px; width: 450px;">
+       <div class="card-body">
+         <h5 class="card-title">{{hood.neighbourhood}}</h5>
+       </div>
+     </div>
+     {% endfor %}
+   </div>
+ </div>
+ {% endblock %}
