configed database settings

--- a/Thehood/templates/add-hood.html
+++ b/Thehood/templates/add-hood.html
@@ -9,7 +9,7 @@
         <form action="{% url 'add_hood' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form hoodform %}
-            <input type="submit" class="btn btn-success" value="Add Neighborhood">
+            <input type="submit" class="btn btn-success" value="Add neighbourhood">
         </form>
     </div>
     <div class="col-md-2"></div>
