--- a/Thehood/templates/navbar.html
+++ b/Thehood/templates/navbar.html
@@ -27,7 +27,7 @@
             <div style="float:right;">
                 <ul class="nav">
                         <li class="nav-item">
-                                <a class='btn btn-default'a href="/logout">Logout</a>
+                                <a class='btn btn-default'a href="{% url 'add_hood'%}">Logout</a>
                             </li>
                             <li class="nav-item">
                                 <a class='btn btn-default' href="{%url 'profile' %}">My Profile</a>
