--- a/Thehood/templates/hood.html
+++ b/Thehood/templates/hood.html
@@ -7,7 +7,7 @@
     <br>
     <h6 style="text-align: center">{{single_hood.occupants.count}}</h6>
     <br>
-    <a href="{% url 'leave' neighborhood_id=single_hood.id %}" class="btn btn-outline-danger">Leave Neighborhood</a>
+    <a href="{% url 'leave' neighbourhood_id=single_hood.id %}" class="btn btn-outline-danger">Leave neighbourhood</a>
     <a href="{% url 'add_post' %}" class="btn btn-outline-primary">Add Post</a>
     <a href="{% url 'upload_business' %}" class="btn btn-outline-primary">Include Business</a>
 
