--- a/Thehood/templates/live.html
+++ b/Thehood/templates/live.html
@@ -1,36 +1,41 @@
- {% extends 'base.html' %}
- {% load bootstrap4 %}
- {% block content %}
- <div class="container-fluid">
-   <div class="row" id="parent">
-     <h3 style="color:#00A6FB;margin:1%;">Hoods in Neighbourhood</h3><br><br>
-     {% for hood in hoods %}
-     <div class="card" id="child">
-       <img class="card-img-top" src="{{hood.pic.url}}" id="childppic" alt="Card image cap"
-         style="height: 400px; width: 450px;">
-       <div class="card-body">
-         <h5 class="card-title">{{hood.neighbourhood}}</h5>
-       </div>
-     </div>
+{%extends 'base.html'%}
+{% load bootstrap4 %}
+{% load static %}
+{% block content %}
+{{block.super}}
 
-     <p><strong>{{hood.name}}</strong> {{hood.location}}</p>
-     <a href="{% url 'join' neighbourhood_id=hood.id %}"class="btn btn-outline-success">Join neighbourhood</a>
-     <p class="card-text" style="font-size:14px;"><small class="text-muted">  </p>
 
-      {% empty%}
-      <p> No Neighbourhoods</p>
+<div class="container">
+  <div class="row">
+      <div class="col-md-3">
 
-     {% endfor %}
-   </div>
- </div>
 
- <!-- <div class="container-fluid"> -->
-   <!-- <div class="row"> -->
-     <!-- {% for hood in hoods %} -->
-     <!-- <p>{{ hood.neighbourhood}}</p> -->
-     <!-- {% empty %} -->
-     <!-- <p>Nut'n in it</p> -->
-     <!-- {% endfor%} -->
-   <!-- </div> -->
- <!-- </div> -->
- <!-- {% endblock %} -->
+      </div>
+    <div class="col-md-8" style="text-align: center; ">
+        {% for hood in hoods %}
+
+      <br><br>
+
+      <div class="card img-fluid" style="margin-right: 8px">
+        <img src="{{hood.pic.url}}" class="card img-fluid" alt="image" style="width:1500px;height:500px">
+
+      </div>
+      <h5 class="card-title">{{hood.neighbourhood}}</h5>
+      <p><strong>{{hood.name}}</strong></p>
+      <p><strong>{{hood.location}}</strong> </p>
+      <a href="{% url 'join' neighbourhood_id=hood.id %}" class="btn btn-outline-success">Join neighbourhood</a>
+      <p class="card-text" style="font-size:14px;"><small class="text-muted">
+      </p>
+      {% endfor %}
+
+    </div>
+    <div class="col-md-3">
+    </div>
+
+
+
+  </div>
+
+</div>
+
+{% endblock %}
