--- a/Thehood/templates/profile.html
+++ b/Thehood/templates/profile.html
@@ -76,7 +76,7 @@
                     {% endfor %}
                 </div>
                 <div class="row">
-                        <img src="{{user.profile.neighbourhood.pic.url}}" class="img-fluid" style="height:300px;width:100%;" alt="...">
+                        <img src="{{user.profile.neighbourhood.pic.url}}" class="img-fluid" style="height:350px;width:400px;" alt="...">
                 </div>
                 <div class="row">
                       
