--- a/Thehood/templates/navbar.html
+++ b/Thehood/templates/navbar.html
@@ -1,67 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-    <div class="nav sticky-top" role="navigation" id="colored-nav">
-        <div class="container-fluid" id="navwhole">
-            <div class="navbar-header">
-                <div>
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </div>
-            </div>
-            <div style="float: left;">
-                    <ul class="nav">
-                        <li>
-                            <a href="" class="nav-link" style="font-family: 'Righteous', cursive;font-size:20px;"><i class="fas fa-home"></i> Neighbourhood</a>
-                        </li>
-            </ul>
-            </div>
-            <div style="float:right;">
-                <ul class="nav">
-                        <li class="nav-item">
-                                <a class='btn btn-default'a href="{% url 'add_hood'%}">Logout</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class='btn btn-default' href="{%url 'profile' %}">My Profile</a>
-                              </li>
-                    {% if user.is_authenticated %}
-                    <li class="dropdown" class="nav-item">
-                        <a href="" class="nav-link" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">
-                            <i class="fas fa-user"></i>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                                <li>
-                                  <a href="{%url 'profile' %}">Account</a>
-                                </li>
-                                <li>
-                                  <a href="/accounts/password/change">Change Password</a>
-                                </li>
-                                <li>
-                                  <a href="/logout">Logout</a>
-                                </li>
-                        </ul>
-                    </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class='btn btn-default' href="/accounts/register">Sign Up</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class='btn btn-default' href="/accounts/login">Login</a>
-                        </li>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand" style="color: white" href="#">The neighbourhood</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" style="color: white" href="/">Home <span class="sr-only">(current)</span ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="color: white" href="{%url 'profile'%}">Profile</a>
+            </li>
             
-                        {% endif %}
-                </ul>
-            </div>
-        </div>
-    </div>
-</body>
+            <li class="nav-item">
+              <a class="nav-link disabled" style="color: white" href="{%url 'add_hood'%}">Add hood</a>
+            </li><br><br>
 
-</html>
+            <li class="nav-item">
+                    <a class="nav-link" style="color: white" href="/logout">Logout</a>
+                  </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
