--- a/Thehood/templates/base.html
+++ b/Thehood/templates/base.html
@@ -9,7 +9,9 @@
     {%block styles%}
     {%bootstrap_css%}
     <link rel="stylesheet" href="{% static 'css/basenews.css' %}">
-    
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Faster+One&display=swap" rel="stylesheet">
+
 
     {%endblock%}
 </head>
