--- a/Thehood/templates/navbar.html
+++ b/Thehood/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" style="color: white" href="#">The neighbourhood</a>
+        <a class="navbar-brand" style="color: white;  font-family: 'Luckiest Guy', cursive;" href="#">The neighbourhood</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -7,18 +7,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" style="color: white" href="/">Home <span class="sr-only">(current)</span ></a>
+              <a class="nav-link" style="color: white; font-family: 'Faster One', cursive; "
+              href="/">Home <span class="sr-only">(current)</span ></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" style="color: white" href="{%url 'profile'%}">Profile</a>
+              <a class="nav-link" style="color: white; font-family: 'Faster One', cursive;" href="{%url 'profile'%}">Profile</a>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link disabled" style="color: white" href="{%url 'add_hood'%}">Add hood</a>
+              <a class="nav-link disabled" style="color: white; font-family: 'Faster One', cursive;" href="{%url 'add_hood'%}">Add hood</a>
             </li><br><br>
 
             <li class="nav-item">
-                    <a class="nav-link" style="color: white" href="/logout">Logout</a>
+                    <a class="nav-link" style="color: white; font-family: 'Faster One', cursive;" href="/logout">Logout</a>
                   </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
