--- a/Thehood/templates/registration/base.html
+++ b/Thehood/templates/registration/base.html
@@ -1,28 +1,34 @@
-{% load bootstrap4 %}
+{% load bootstrap3 %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {%if title%}
 
-    <title>{{title}}</title>
-    {%endif%}
-    {% block styles %}
+  {%if title%}
+
+  <title>{{title}}</title>
+
+  {%endif%}
+
+  {% block styles %}
     {% bootstrap_css %}
-    {% endblock %}
+  {% endblock %}
 
 </head>
 
 <body>
-    {% block content %} {%endblock%}
-    {% block scripts %}
+
+  {% block content %}  {%endblock%}
+
+
+  {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     {% bootstrap_javascript %}
-    {% endblock %}
+  {% endblock %}
 
 </body>
 
